# Origin

./: h -f origin main
CMakehmwrk/: CMakeLists.txt  main.cpp
CMakehmwrk 2/: .gitignore  CMakeLists.txt
CMakehmwrk 2/include/: figures.h
CMakehmwrk 2/src/: figures.cpp  main.cpp
Cmake2rebuild/CMakereuse/: CMakereuse.sln
Cmake2rebuild/CMakereuse/CMakereuse/: CMakereuse.vcxproj  CMakereuse.vcxproj.filters
Lesson 1 04.12.24/Task 1/: main.cpp
Lesson 1 04.12.24/Task 2/Task 2/: Task 2.sln
Lesson 1 04.12.24/Task 3/Task 3/: Task 3.sln
Lesson 2 15.12.24/Task 1/: main.cpp
Lesson 2 15.12.24/Task 2/: main.cpp
Lesson 3 16.12.24/Task 1/: main.cpp
Lesson 3 16.12.24/Task 2/: main.cpp
Lesson 4 22.12.24/Task 3/: main.cpp
Lesson 4 22.12.24/Task1/: main.cpp
Lesson 4 22.12.24/Task2/: main.cpp
Lesson 5 29.12.24/Task 1/Task 1/: Task 1.sln
Lesson 5 29.12.24/Task 2/Task 2/: Task 2.sln
Lesson 5 29.12.24/Task 3/Task 3/: Task 3.sln
Lesson 6 07.01.25/Task 1/: Task 1.sln
Lesson 6 07.01.25/Task 1/Task 1/: Source.cpp  Task 1.vcxproj
Lesson 6 07.01.25/Task 2/: Task 2.sln
Lesson 6 07.01.25/Task 2/Task 2/: Source.cpp  Task 2.vcxproj
Lesson 7 08.01.25/Task 8/Task 8/: Figure.cpp  Figure.h  RightTriangle.cpp  RightTriangle.h  Task 8.sln  Task 8.vcxproj  Task 8.vcxproj.filters  Triangle.cpp  main.cpp  (+1 more)
Lesson 7 08.01.25/Task7/: Task7.sln
Lesson 7 08.01.25/private/: .gitignore
Lesson 9 18.01.2025/Task 1/: Task 1.sln
Lesson 9 18.01.2025/Task 2/: Task 2.sln
Исправление/: Исправление.sln
Исправление/Исправление/: Исправление.vcxproj  Исправление.vcxproj.filters
(+169 files in other folders)
